--- a/.env
+++ b/.env
@@ -12,7 +12,8 @@ NEXTAUTH_URL="http://localhost:3000"
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-POSTGRES_PRISMA_URL="postgresql://postgres:mysecretpassword@localhost:5432/teamdrivex?schema=public"
+# POSTGRES_PRISMA_URL="postgresql://postgres:mysecretpassword@host.docker.internal:5432/teamdrivex?schema=public&connect_timeout=300"
+POSTGRES_PRISMA_URL="postgresql://postgres:mysecretpassword@localhost:5432/teamdrivex?schema=public&connect_timeout=300"
 
 # POSTGRES_PRISMA_URL="file:./dev.db"
 
