--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ NEXTAUTH_URL="http://localhost:3000"
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 # POSTGRES_PRISMA_URL="postgresql://postgres:mysecretpassword@host.docker.internal:5432/teamdrivex?schema=public&connect_timeout=300"
-POSTGRES_PRISMA_URL="postgresql://postgres:mysecretpassword@localhost:5432/teamdrivex?schema=public&connect_timeout=300"
+POSTGRES_PRISMA_URL="postgresql://postgres:mysecretpassword@db:5432/teamdrivex?schema=public&connect_timeout=300"
 
 # POSTGRES_PRISMA_URL="file:./dev.db"
 
