--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 services:
   app:
     image: teamdrivex
@@ -8,7 +8,7 @@ services:
     ports:
       - 3000:3000
     volumes:
-      - ./:/app 
+      - ./:/app
       - /app/node_modules
     depends_on:
       - db
